crates/sui-adapter-transactional-tests/tests/programmable/delayed_invalid_gas_by_value.exp
processed 5 tasks

init:
A: object(0,0)

task 1 'publish'. lines 8-13:
Error: error[E01002]: unexpected token
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.gKPRoFNgiS/.tmpMNraXY:12:16
   │
12 │     public fun mut<T: key>(_: &mut T, _: T) { abort 0 }
   │                ^^^
   │                │
   │                Unexpected 'mut'
   │                Expected an identifier



task 2 'programmable'. lines 15-17:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 3 'programmable'. lines 19-20:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 4 'programmable'. lines 22-23:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }
